--- a/com.ibm.js.team.workitem.commandline/lib/.gitignore
+++ b/com.ibm.js.team.workitem.commandline/lib/.gitignore
@@ -1,3 +1,4 @@
 /com.ibm.team.workitem.rcp.core_3.1.1100.v20150903_1924.jar
 /commons-lang3-3.4.jar
 /opencsv-3.7.jar
+/com.ibm.team.workitem.rcp.core_3.1.1300.v20160902_2201.jar 
