--- a/com.ibm.js.team.workitem.commandline/build.properties
+++ b/com.ibm.js.team.workitem.commandline/build.properties
@@ -1,4 +1,9 @@
-source.. = src/
-output.. = bin/
 bin.includes = META-INF/,\
                bin/
+bin.excludes = bin/dev_wcl.bat,\
+               bin/dev_wcl_rmi.bat,\
+               bin/dev_wclrmi_clientcreate.bat,\
+               bin/dev_wclrmi_server.bat,\
+               bin/rmi_no.policy,\
+               bin/scripts/,\
+               bin/server.policy
