Compilation fixups for the classes (excluding UserAllocationHelper). That one appears to use non-standard API calls so it will need some more work.  Also fixed up some copyrights.

--- a/com.ibm.js.team.workitem.commandline/.classpath
+++ b/com.ibm.js.team.workitem.commandline/.classpath
@@ -7,5 +7,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/PlainJavaApi"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCSV"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Commons-lang"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JenaCore"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JunoAll"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
