Keep old library names

--- a/com.ibm.js.team.workitem.commandline/.classpath
+++ b/com.ibm.js.team.workitem.commandline/.classpath
@@ -7,12 +7,12 @@
 	</classpathentry>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/702SR1_JavaLIb"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/PlainJavaApi"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/OpenCSV"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Commons-lang"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/SLF4J"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JunoAll"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EWMCommon"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Jena"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JenaCore"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
