Added commons.lang3 back in for opencsv

--- a/com.ibm.js.team.workitem.commandline/.classpath
+++ b/com.ibm.js.team.workitem.commandline/.classpath
@@ -14,5 +14,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/EWMCommon"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JenaCore"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JunoAll"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/Commons-lang"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
